[gd_scene load_steps=3 format=3 uid="uid://dhdjej2c4lbtq"]

[ext_resource type="Material" uid="uid://c5umr3vsanoru" path="res://ui/side_bar/shader_button_minus/shader_material_minus.tres" id="1_8h8km"]
[ext_resource type="Script" path="res://ui/side_bar/shader_button_minus/shader_button_minus.gd" id="2_4js35"]

[node name="ShaderButtonMinus" type="Panel"]
material = ExtResource("1_8h8km")
custom_minimum_size = Vector2(31, 31)
script = ExtResource("2_4js35")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
